# mantra-benchmarks

./: .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  benchmarks.md  convert.py  docker-compose.yml  experiment.ipynb  experiment_betti_TAG.ipynb  experiment_betti_TransformerConv.ipynb  experiment_betti_gnn.ipynb  experiment_betti_mlp.ipynb  experiment_gnn.ipynb  experiment_mlp.ipynb  experiment_name_TAG.ipynb  experiment_name_Transformer.ipynb  experiment_name_gnn.ipynb  experiment_name_mlp.ipynb  experiment_orientability_TAG.ipynb  experiment_orientability_TransformerConv.ipynb  experiment_orientability_gnn.ipynb  experiment_orientability_mlp.ipynb  experiment_scconv.ipynb  experiment_simplex2vec.ipynb  export.ipynb  generate_configs.py  generate_configs.sh  k_simplex2vec.py  loggers.py  main.py  main_gcn.py  playground.ipynb  project.csv  pyproject.toml  run.py  test.py  test.sh  train.ps1  train.sh
code/: CellComplexCombinatorics.py  general_utils.py  generate_configs.sh  generate_tables.sh  math_utils.py  results_betti_numbers.csv  results_name.csv  results_orientability.csv  run.py  test.sh  train.sh
configs/: config.yaml  gat_betti_numbers_degree_transform.yaml  gat_betti_numbers_random_node_features.yaml  gat_name_degree_transform.yaml  gat_name_random_node_features.yaml  gat_orientability_degree_transform.yaml  gat_orientability_random_node_features.yaml  gcn_betti_numbers_config.yaml  gcn_betti_numbers_degree_transform.yaml  gcn_betti_numbers_random_node_features.yaml  gcn_name_config.yaml  gcn_name_degree_transform.yaml  gcn_name_random_node_features.yaml  gcn_orientability_config.yaml  gcn_orientability_degree_transform.yaml  gcn_orientability_random_config.yaml  gcn_orientability_random_node_features.yaml  mlp_betti_numbers_degree_transform.yaml  mlp_betti_numbers_degree_transform_onehot.yaml  mlp_orientability_degree_transform.yaml  mlp_orientability_degree_transform_onehot.yaml  mlp_orientability_random_node_features.yaml  tag_betti_numbers_degree_transform.yaml  tag_betti_numbers_random_node_features.yaml  tag_name_degree_transform.yaml  tag_name_random_node_features.yaml  tag_orientability_degree_transform.yaml  tag_orientability_degree_transform_onehot.yaml  tag_orientability_random_node_features.yaml  transfconv_betti_numbers_degree_transform.yaml  transfconv_betti_numbers_degree_transform_onehot.yaml  transfconv_betti_numbers_random_node_features.yaml  transfconv_name_degree_transform.yaml  transfconv_name_degree_transform_onehot.yaml  transfconv_name_random_node_features.yaml  (+2 more)
(+545 files in other folders)
